# lc-course

./: .gitignore  create_agent.py  hello.ipynb  hello.py  invoke_llm.py  message.py  model_init.py  openapi.py  pyproject.toml  tools.py  tools_init_bashscope.py  tools_init_deepseek.py  tools_old_init_bashscope.py
.ipynb_checkpoints/: hello-checkpoint.ipynb
