[project]
name = "lc-course"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "dashscope>=1.26.4",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.5",
    "notebook>=7.6.0",
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
]
